@@ -51,8 +51,11 @@ Version 4.3  [ 31 March, 2006 ]
             - New operator < for ordering manifolds deterministically.
         Class NMatrix2:
             - New specialised class for working with 2-by-2 integer matrices.
-        Class NPacket:
-            - New routine sortChildren().
+        Class NPacket, NPacketListener:
+            - New NPacket routine sortChildren().
+            - Packet listeners are now unregistered immediately *before*
+              packetToBeDestroyed() is called.  This avoids unpleasantries
+              when a listener tries to unregister itself during this call.
         Class NPerm:
             - The assignment operator now returns a reference instead of void.
         Class NSatAnnulus, NSatBlock, NSatRegion, NBlockedSFS, NBlockedSFSLoop,
@@ -94,6 +97,8 @@ Version 4.3  [ 31 March, 2006 ]
           work with closed triangulations.
         - Fixed the crash when deleting a triangulation that is currently the
           target of an isomorphism/subcomplex test.
+        - Fixed a crash that sometimes occurs when deleting a triangulation
+          currently being viewed in a large file.
         - Fixed extremely slow updates in the Composition tab for very
           large data files.
         - Text and script packets now open with the cursor at the
